2011-09-xx Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.4

  * Dejamos la barra de menu siempre visible
  * Ordenamos la salida de albaranes en deposito por fecha de devolucion

2011-09-21 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.3

  * Impedimos el borrado de clientes o proveedores que tengan
    albaranes creados
  * Mecanismo de descuento para uso de credito acumulado

2011-07-25 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.2

  * Problema con calendar_date_select en ventanas modales
  * Correccion del fichero de configuracion de bbdd para backups

2011-07-19 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.1

  * Cambios en traduccion de fechas
  * Fecha por defecto para nuevos albaranes
  * Eliminada carga de gema de calendar_date_select

2011-07-19 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9

  * Actualizar credito de cliente en ventas/devoluciones
  * Selector javascript (calendar_date_select) para fechas
  * Uso de traducciones I18n
  * Desglose por tipos de iva soportado y repercutido en informe de
    posicion global

2011-07-03 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.8

  * Spinner activado para sublistados
  * Productos en deposito para seccion Productos
  * Generación de albaranes de reposición para productos en deposito
  * Filtro de productos en deposito para inventario
  * Orden del listado de clientes por nombre de este
  * Resuelto bug en impresion de tickets de caja con productos metidos
    por entrada por concepto

2011-06-14 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.7

  * Corregido selector de clientes en albaranes
  * Valores iniciales de los filtros de fecha
  * Eliminado filtro de "pagado" en seccion tesoreria 
  * Edicion de campos de albaran ya creado en la introduccion de lineas
  * Captura de excepciones para busquedas de ISBN
  * Duplicacion de facturas
  * El directorio temporal se genera en el arranque