@@ -1,0 +1,64 @@
+SpreadsheetOnRails
+==================
+
+A Rails plugin to generate xls documents by using rxls templates.
+
+Based on Defv's railsxls plugin (http://github.com/DefV/railsxls) without the Java part.
+
+Dependencies
+============
+
+ruby-ole
+spreadsheet
+iconv
+
+Example
+=======
+
+Example spreadsheet usage as found here: http://github.com/jacobat/ruby-spreadsheet
+
+-- in the view "index.xls.rxls
+
+sheet = workbook.create_worksheet
+sheet.name = "What's in a name"
+
+sheet.row(0).concat %w{Name Country Acknowlegement}
+sheet[1,0] = 'Japan'
+row = sheet.row(1)
+row.push 'Creator of Ruby'
+row.unshift 'Yukihiro Matsumoto'
+sheet.row(2).replace [ 'Daniel J. Berger', 'U.S.A.',
+                        'Author of original code for Spreadsheet::Excel' ]
+sheet.row(3).push 'Charles Lowe', 'Author of the ruby-ole Library'
+sheet.row(3).insert 1, 'Unknown'
+sheet.update_row 4, 'Hannes Wyss', 'Switzerland', 'Author'
+
+sheet.row(0).height = 18
+
+format = Spreadsheet::Format.new :color => :blue,
+                                 :weight => :bold,
+                                 :size => 18
+sheet.row(0).default_format = format
+
+bold = Spreadsheet::Format.new :weight => :bold
+4.times do |x| sheet.row(x + 1).set_format(0, bold) end
+
+
+-- in the controller
+
+def xls_filename
+  "your-filename.xls"
+end
+
+def index
+  @lines = Line.find(:all)
+
+  respond_to do |format|
+    format.html # index.html.erb
+    format.xml  { render :xml => @lines }
+    format.xls  { render :action => "index", :layout => false }
+  end
+end
+
+
+Copyright (c) 2009 10to1, released under the MIT license
