@@ -1,0 +1,3 @@
+require 'rubygems'
+require 'active_support'
+require 'active_support/test_case'
