@@ -2,6 +2,7 @@
 
   * Dejamos la barra de menu siempre visible
   * Ordenamos la salida de albaranes en deposito por fecha de devolucion
+  * Incluido plugin spreadsheet_on_rails
 
 2011-09-21 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.9.3
 
